--- a/oroi/ui/templates/index.html
+++ b/oroi/ui/templates/index.html
@@ -258,6 +258,7 @@
           <option value="category">Category</option>
           <option value="role">Role</option>
           <option value="interest_date">Interest date</option>
+          <option value="declared_date">Declared date</option>
         </select>
     </div>
 
@@ -265,7 +266,7 @@
         <select class="form-control" v-model="filter">
           <option disabled value="">Select filter type...</option>
           <!-- https://django-elasticsearch-dsl-drf.readthedocs.io/en/latest/filtering_usage_examples.html  -->
-          <template v-if="field != 'interest_date'">
+          <template v-if="field.indexOf('_date') < 0">
             <option value="contains">Contains exactly</option>
             <option value="startswith">Starts with exactly</option>
             <option value="endswith">Ends with exactly</option>
@@ -276,11 +277,11 @@
         </select>
     </div>
 
-    <div class="form-group col" v-if="field != 'interest_date'">
+    <div class="form-group col" v-if="field.indexOf('_date') < 0">
         <input type="text" class="form-control" v-model="value" placeholder="text" />
     </div>
 
-    <template v-if="field == 'interest_date'">
+    <template v-if="field.indexOf('_date') > 0">
       <div class="form-group col">
         <input type="date" v-model="dateFrom" class="form-control" />
       </div>
