ui: index: Correct date month. Months are 0 indexed in JS
https://github.com/OpenDataServices/open-register-of-interests/issues/13

--- a/oroi/ui/templates/index.html
+++ b/oroi/ui/templates/index.html
@@ -640,7 +640,7 @@ var csvUrl = "{% url "ui:csv-download" %}"
         break;
 
       default:
-        return date.getDate() + "/" + date.getMonth() + "/" + date.getFullYear();
+        return date.getDate() + "/" + (date.getMonth()+1) + "/" + date.getFullYear();
         break;
     }
   });
