ui: index: dateTime filter if no value for date return empty string
Fixes https://github.com/OpenDataServices/open-register-of-interests/issues/16

--- a/oroi/ui/templates/index.html
+++ b/oroi/ui/templates/index.html
@@ -622,6 +622,9 @@ var csvUrl = "{% url "ui:csv-download" %}"
   });
 
   Vue.filter('dateString', function (value, format) {
+    if (!value){
+      return "";
+    }
     /* NB if this gets big lets use one of many many libraries that do this for us */
     if (format == "range"){
       let dates = value.split("__");
