ui: link the h1 header to the home page
https://github.com/OpenDataServices/open-register-of-interests/issues/17

--- a/oroi/ui/templates/home.html
+++ b/oroi/ui/templates/home.html
@@ -4,7 +4,7 @@
   <main role="main">
     <div class="jumbotron">
       <div class="container text-center">
-        <h1 class="display-3">declared.</h1>
+        <h1 class="display-3"><a href="/">declared.</a></h1>
         <p class="text-muted">declared. collects declarations of interests, gifts, employment and more from elected members of bodies around the UK</p>
         <form method="GET" action="{% url 'ui:search' %}" >
 
