--- a/oroi/ui/templates/index.html
+++ b/oroi/ui/templates/index.html
@@ -26,7 +26,7 @@
 <div>
     <section class="jumbotron text-center">
       <div class="container">
-        <h1 class="display-3">declared.</h1>
+        <h1 class="display-3"><a href="/">declared.</a></h1>
         <p class="lead text-muted">declared. collects declarations of interests, gifts, employment and more from elected members of bodies around the UK</p>
         <ul class="nav nav-tabs" id="myTab" role="tablist">
           <li class="nav-item" role="presentation">
