ui and api: Fix role filter
https://github.com/OpenDataServices/open-register-of-interests/issues/19

--- a/oroi/ui/templates/index.html
+++ b/oroi/ui/templates/index.html
@@ -256,7 +256,7 @@
           <option value="member_name">Member name</option>
           <option value="body_name">Body name</option>
           <option value="category">Category</option>
-          <option value="role">Role</option>
+          <option value="member_role">Role</option>
           <option value="interest_date">Interest date</option>
           <option value="declared_date">Declared date</option>
         </select>
